# ooai-skills

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: COMMANDS.md  CONCEPTS.md  CURATED.md  DEEPAGENTS.md  E2E.md  FAQ.md  INDEX.md  MINIO.md  SECURITY.md  TROUBLESHOOTING.md  conf.py  index.md
docs/_sphinx/: conf.py  index.md
notes/: CLAUDE_CODE_INFRASTRUCTURE.md  CLAUDE_CODE_SKILLS.md  DOTAGENTS_AND_CONVENTIONS.md  INDEX.md  INTEGRATION_MAP.md  MCP.md  MEMORY_AND_CONTEXT.md  SKILL_MD_STANDARD.md
scripts/: README.md  bootstrap_minio.sh  create.sh  export_sources.sh  ingest_curated_zips.sh  init.sh  install.sh  install_curated.sh  mirror_curated.sh  pull.sh  push_local.sh  search.sh  status.sh
src/ooai_skills/: __init__.py  __main__.py  cli.py  curated.py  direct.py  discover.py  frontmatter.py  git.py  hashing.py  ingest_zip.py  init.py  local.py  mcp_server.py  mirror.py  models.py  push_local.py  remote_tools.py  s3.py  settings.py  sources.py  sync.py
src/ooai_skills/data/: curated.json
tests/: test_create.py  test_direct.py  test_discover.py  test_discover_lint.py  test_frontmatter.py  test_init.py  test_mcp_server.py  test_settings.py  test_sync.py
